WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97289
[Platform] There are memory leak in LocaleICU
https://bugs.webkit.org/show_bug.cgi?id=97289
Summary
[Platform] There are memory leak in LocaleICU
yosin
Reported
2012-09-20 20:52:50 PDT
m_mediumTimeFormat and m_shortTimeFormat of UDateFormat aren't released.
Attachments
Patch 1
(1.90 KB, patch)
2012-09-20 21:10 PDT
,
yosin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
yosin
Comment 1
2012-09-20 21:01:20 PDT
This bug is imported from
http://crbug.com/151006
Valgrind found this memory leak.
yosin
Comment 2
2012-09-20 21:10:44 PDT
Created
attachment 165042
[details]
Patch 1
yosin
Comment 3
2012-09-20 21:11:14 PDT
Comment on
attachment 165042
[details]
Patch 1 Could you review this patch? Thanks in advance.
Kent Tamura
Comment 4
2012-09-20 21:27:21 PDT
Comment on
attachment 165042
[details]
Patch 1 ok
yosin
Comment 5
2012-09-20 21:43:55 PDT
Comment on
attachment 165042
[details]
Patch 1 Clearing flags on attachment: 165042 Committed
r129191
: <
http://trac.webkit.org/changeset/129191
>
yosin
Comment 6
2012-09-20 21:43:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug