[Platform] There are memory leak in LocaleICU https://bugs.webkit.org/show_bug.cgi?id=97289

Reviewed by Kent Tamura.

This patch adds udt_close() calls for medium time format and short
time format data used in LocaleICU class to avoid memory leak.

This memory leak is found by external tool Valgrind and reported in
Chromium bug repositry(http://crbug.com/151006) with stack trace of
call path of leaked memory.

This patch affects ports which enable both ENABLE_INPUT_TYPE_TIME and
ENABLE_INPUT_TYPE_TIME_MULTIPLE_FIELDS.

No new tests. External tool such as Valgrind will check this memory leak.

* platform/text/LocaleICU.cpp:
(WebCore::LocaleICU::~LocaleICU): Added to call udt_close() for m_mediumTimeFormat
and m_shortTimeFormat which have UDateFormat objects.

Canonical link: https://commits.webkit.org/115237@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129191 268f45cc-cd09-0410-ab3c-d52691b4dbfc